--- a/src/routes/lines/index.scss
+++ b/src/routes/lines/index.scss
@@ -141,7 +141,7 @@
 .lines-item p,
 .lines-list,
 .card-heading {
-  font-size: 9vw;
+  font-size: 10vw;
 }
 
 // convert to desktop type styles
